--- a/rc05_events-useStateHook/package.json
+++ b/rc05_events-useStateHook/package.json
@@ -14,6 +14,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
